--- a/po/sv_SE/mailing.po
+++ b/po/sv_SE/mailing.po
@@ -14,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-06 11:01+0000\n"
+"Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2518,7 +2518,7 @@ msgstr ""
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Document Body"
-msgstr ""
+msgstr "Dokumentinnehåll"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Campaign %1 %2"
@@ -2596,7 +2596,7 @@ msgstr ""
 
 #: CRM/Mailing/Form/Component.php
 msgid "Please provide either HTML or TEXT format for the Body."
-msgstr ""
+msgstr "Ange antingen HTML eller TEXT för innehållets format."
 
 #: CRM/Mailing/Selector/Browse.php
 msgid "Public View"
