--- a/po/fi_FI/common-components.po
+++ b/po/fi_FI/common-components.po
@@ -4,6 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Antti Kuosmanen <antti@seravo.fi>, 2014
+# Pinja-Liina Jalkanen <pinjaliina@iki.fi>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Tomi Toivio <tomi@sange.fi>, 2013
 # Tomi Toivio <tomi@sange.fi>, 2013
@@ -12,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-07 15:11+0000\n"
+"Last-Translator: Pinja-Liina Jalkanen <pinjaliina@iki.fi>\n"
 "Language-Team: Finnish (http://www.transifex.com/civicrm/civicrm/language/fi/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -757,7 +758,7 @@ msgstr "Lähetä lisää muistutuksia"
 
 #: CRM/Contribute/Form/AdditionalInfo.php CRM/Member/Form/Membership.php
 msgid "receipt"
-msgstr ""
+msgstr "kuitti"
 
 #: CRM/Contribute/Form/AdditionalPayment.php
 #: templates/CRM/Pledge/Page/Payment.tpl
@@ -934,7 +935,7 @@ msgstr ""
 #: xml/templates/message_templates/contribution_online_receipt_subject.tpl
 #: xml/templates/message_templates/membership_online_receipt_subject.tpl
 msgid "Receipt"
-msgstr ""
+msgstr "Kuitti"
 
 #: CRM/Contribute/Form/ContributionPage/TabHeader.php
 #: CRM/Event/Form/ManageEvent/TabHeader.php
@@ -1219,7 +1220,7 @@ msgstr ""
 #: xml/templates/message_templates/membership_online_receipt_html.tpl
 #: xml/templates/message_templates/membership_online_receipt_text.tpl
 msgid "Transaction #"
-msgstr ""
+msgstr "Tapahtuman tunnus"
 
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 #: xml/templates/message_templates/membership_online_receipt_html.tpl
@@ -1802,14 +1803,14 @@ msgstr ""
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 #: xml/templates/message_templates/membership_online_receipt_html.tpl
 msgid "Please print this confirmation for your records."
-msgstr ""
+msgstr "Voit halutessasi tallentaa tämän tositteen kirjanpitoosi."
 
 #: xml/templates/message_templates/contribution_online_receipt_html.tpl
 #: xml/templates/message_templates/contribution_online_receipt_text.tpl
 #: xml/templates/message_templates/membership_online_receipt_html.tpl
 #: xml/templates/message_templates/membership_online_receipt_text.tpl
 msgid "Display In Honor Roll"
-msgstr ""
+msgstr "Näytä lahjoittajien julkisessa listassa"
 
 #: xml/templates/message_templates/contribution_online_receipt_html.tpl
 #: xml/templates/message_templates/contribution_online_receipt_text.tpl
