--- a/po/fi_FI/pcp.po
+++ b/po/fi_FI/pcp.po
@@ -3,14 +3,15 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Pinja-Liina Jalkanen <pinjaliina@iki.fi>, 2016
 # Tomi Toivio <tomi@sange.fi>, 2013
 # Tomi Toivio <tomi@sange.fi>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:06+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-07 15:06+0000\n"
+"Last-Translator: Pinja-Liina Jalkanen <pinjaliina@iki.fi>\n"
 "Language-Team: Finnish (http://www.transifex.com/civicrm/civicrm/language/fi/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -740,19 +741,19 @@ msgstr ""
 #: xml/templates/message_templates/pcp_owner_notify_html.tpl
 #: xml/templates/message_templates/pcp_owner_notify_text.tpl
 msgid "You have received a donation at your personal page"
-msgstr ""
+msgstr "Henkilökohtaisella kampanjasivullasi on tehty lahjoitus"
 
 #: xml/templates/message_templates/pcp_owner_notify_html.tpl
 #: xml/templates/message_templates/pcp_owner_notify_text.tpl
 msgid "Your fundraising total has been updated."
-msgstr ""
+msgstr "Tiedot varainkeruusi kokonaistilanteesta on päivitetty."
 
 #: xml/templates/message_templates/pcp_owner_notify_html.tpl
 #: xml/templates/message_templates/pcp_owner_notify_text.tpl
 msgid ""
 "The donor's information is listed below.  You can choose to contact them and"
 " convey your thanks if you wish."
-msgstr ""
+msgstr "Lahjoittajan tiedot on listattu alla. Voit halutessasi ottaa häneen yhteyttä ja välittää hänelle kiitoksesi."
 
 #: xml/templates/message_templates/pcp_owner_notify_html.tpl
 #: xml/templates/message_templates/pcp_owner_notify_text.tpl
@@ -763,11 +764,11 @@ msgstr ""
 
 #: xml/templates/message_templates/pcp_owner_notify_subject.tpl
 msgid "Someone has just donated to your personal campaign page"
-msgstr ""
+msgstr "Henkilökohtaisella lahjoitussivullasi on tehty lahjoitus"
 
 #: xml/templates/message_templates/pcp_owner_notify_text.tpl
 msgid "Personal Campaign Page Owner Notification"
-msgstr ""
+msgstr "Tiedote henkilökohtaisen kampanjasivun omistajalle"
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
