--- a/po/fr_FR/common-base.po
+++ b/po/fr_FR/common-base.po
@@ -43,8 +43,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-07 08:20+0000\n"
+"Last-Translator: Philippe SAMPONT <PhilippeS@cncd.be>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -26567,11 +26567,11 @@ msgstr "Afficher %1 entrées"
 
 #: templates/CRM/common/navigation.js.tpl
 msgid "%1 not found."
-msgstr ""
+msgstr "%1 introuvable."
 
 #: templates/CRM/common/navigation.js.tpl
 msgid "Did you mean to search by Name/Email instead?"
-msgstr ""
+msgstr "Ne vouliez-vous pas plutôt faire une recherche par Nom/adresse électronique ?"
 
 #: templates/CRM/common/success.tpl
 msgid "The database will be upgraded from %1 to %2."
