--- a/po/fi_FI/contribute.po
+++ b/po/fi_FI/contribute.po
@@ -5,13 +5,14 @@
 # Translators:
 # Antti Kekki <antti.kekki@gmail.com>, 2013
 # Antti Kekki <antti.kekki@gmail.com>, 2013
+# Pinja-Liina Jalkanen <pinjaliina@iki.fi>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-07 13:41+0000\n"
+"Last-Translator: Pinja-Liina Jalkanen <pinjaliina@iki.fi>\n"
 "Language-Team: Finnish (http://www.transifex.com/civicrm/civicrm/language/fi/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -878,7 +879,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "Contribute"
-msgstr ""
+msgstr "Lahjoita"
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "I want to contribute this amount"
@@ -898,7 +899,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "Contribution amount must be at least %1"
-msgstr ""
+msgstr "Lahjoitussumman tulee olla vähintään %1"
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "Contribution amount cannot be more than %1."
@@ -1021,7 +1022,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/Contribution/OnBehalfOf.php
 msgid "Organization Details"
-msgstr ""
+msgstr "Organisaation tiedot"
 
 #: CRM/Contribute/Form/Contribution/OnBehalfOf.php
 msgid "Select an existing related Organization OR enter a new one"
@@ -2673,19 +2674,19 @@ msgstr ""
 msgid ""
 "Your contribution has been submitted to %1 for processing. Please print this"
 " page for your records."
-msgstr ""
+msgstr "Suorituksesi on lähetetty %1-palveluun käsiteltäväksi. Voit tallentaa tämän kuitin kirjanpitoosi."
 
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid ""
 "An email receipt will be sent to %1 and to %2 once the transaction is "
 "processed successfully."
-msgstr ""
+msgstr "Kun suoritus on käsitelty, kuitti suorituksesta lähetetään osoitteisiin %1 ja %2."
 
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid ""
 "An email receipt will be sent to %1 once the transaction is processed "
 "successfully."
-msgstr ""
+msgstr "Kun suoritus on käsitelty, kuitti suorituksesta lähetetään osoitteeseen %1."
 
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid ""
@@ -2707,7 +2708,7 @@ msgstr ""
 #: xml/templates/message_templates/contribution_online_receipt_html.tpl
 #: xml/templates/message_templates/contribution_online_receipt_text.tpl
 msgid "Contribution Information"
-msgstr ""
+msgstr "Lahjoituksen tiedot"
 
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid "This membership will be renewed automatically every %1 %2(s)."
