--- a/po/de_DE/case.po
+++ b/po/de_DE/case.po
@@ -23,8 +23,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-12 14:03+0000\n"
+"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1051,7 +1051,7 @@ msgstr "Alle Fälle mit anstehenden Aktivitäten"
 msgid ""
 "There are no open cases with activities scheduled in the next two weeks. Use"
 " %1 to expand your search."
-msgstr "Es sind keine offenen Veranstaltungen in den nächsten 2 Wochen geplant. Nutzen Sie %1 um ihre Suche zu erweitern."
+msgstr "Es gibt keine offenen Fälle mit Aktivitäten in den nächsten zwei Wochen. Nutzen Sie %1 um ihre Suche zu erweitern."
 
 #: templates/CRM/Case/Page/DashBoard.tpl
 msgid "My Cases With Recently Performed Activities"
@@ -1065,7 +1065,7 @@ msgstr "Alle Fälle mit kürzlich durchgeführten Aktivitäten"
 msgid ""
 "There are no cases with activities scheduled in the past two weeks. Use %1 "
 "to expand your search."
-msgstr "Es sind keine offenen Veranstaltungen in den letzten 2 Wochen erfasst. Nutzen Sie %1 um ihre Suche zu erweitern."
+msgstr "Es gibt keine Fälle mit Aktivitäten in den letzten zwei Wochen. Nutzen Sie %1 um ihre Suche zu erweitern."
 
 #: templates/CRM/Case/Page/DashboardSelector.tpl
 msgid "Manager"
