--- a/po/lt_LT/campaign.po
+++ b/po/lt_LT/campaign.po
@@ -3,15 +3,16 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Edgaras Kaveckas <edgaras.kaveckas@ecolink.lt>, 2016
 # jonaskariniauskas <jonas.kariniauskas@gmail.com>, 2012
 # pnomeda <pnomeda@yahoo.com>, 2012
 # Povilas Daukas <povilas@daukas.lt>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:10+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-13 21:16+0000\n"
+"Last-Translator: Edgaras Kaveckas <edgaras.kaveckas@ecolink.lt>\n"
 "Language-Team: Lithuanian (http://www.transifex.com/civicrm/civicrm/language/lt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25,7 +26,7 @@ msgstr "Dabartinės kampanijos"
 
 #: CRM/Campaign/BAO/Campaign.php
 msgid "Past Campaigns"
-msgstr "Įvykę kampanijos"
+msgstr "Pasibaigusios kampanijos"
 
 #: CRM/Campaign/BAO/Petition.php
 msgid "No survey sid parameter. Cannot process signature."
@@ -37,11 +38,11 @@ msgstr ""
 
 #: CRM/Campaign/BAO/Query.php
 msgid "Survey - %1"
-msgstr "Peržiūra - %1"
+msgstr "Apklausa - %1"
 
 #: CRM/Campaign/BAO/Query.php
 msgid "Survey Status - %1"
-msgstr "Peržiūros būsena - %1"
+msgstr "Apklausos būsena - %1"
 
 #: CRM/Campaign/BAO/Query.php
 msgid "Survey Interviewer - %1"
@@ -49,7 +50,7 @@ msgstr ""
 
 #: CRM/Campaign/BAO/Query.php
 msgid "Interviewer"
-msgstr ""
+msgstr "Apklausėjas"
 
 #: CRM/Campaign/BAO/Query.php
 msgid "Could not find survey for %1 respondents."
@@ -107,7 +108,7 @@ msgstr ""
 
 #: CRM/Campaign/DAO/Campaign.php CRM/Campaign/DAO/Survey.php
 msgid "Campaign Created Date"
-msgstr "Kampanijos sukūrimo data"
+msgstr "Kampanijos pradžia"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign Modified By"
