--- a/po/lt_LT/financial.po
+++ b/po/lt_LT/financial.po
@@ -3,12 +3,13 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Edgaras Kaveckas <edgaras.kaveckas@ecolink.lt>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-13 21:24+0000\n"
+"Last-Translator: Edgaras Kaveckas <edgaras.kaveckas@ecolink.lt>\n"
 "Language-Team: Lithuanian (http://www.transifex.com/civicrm/civicrm/language/lt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -22,11 +23,11 @@ msgstr ""
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Created By:"
-msgstr ""
+msgstr "Sukurta"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Created Date:"
-msgstr ""
+msgstr "Sukūrimo data"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Last Modified By:"
@@ -34,7 +35,7 @@ msgstr ""
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Payment Instrument:"
-msgstr ""
+msgstr "Mokėjimo priemonė"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Batch"
