--- a/po/ca_ES/common-base.po
+++ b/po/ca_ES/common-base.po
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-11 08:00+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2016-10-14 16:14+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3138,12 +3138,12 @@ msgstr "Adreça del carrer"
 #: CRM/Contact/Form/Edit/Address.php CRM/Core/DAO/Address.php
 #: xml/templates/civicrm_data.tpl
 msgid "Supplemental Address 1"
-msgstr "Direcció complementària 1"
+msgstr "Adreça adicional 1"
 
 #: CRM/Contact/Form/Edit/Address.php CRM/Core/DAO/Address.php
 #: xml/templates/civicrm_data.tpl
 msgid "Supplemental Address 2"
-msgstr "Direcció suplementària 2"
+msgstr "Adreça adicional 2"
 
 #: CRM/Contact/Form/Edit/Address.php CRM/Contact/Form/Search/Criteria.php
 #: CRM/Contact/Form/Search/Custom/Basic.php
@@ -14637,7 +14637,7 @@ msgstr "Número de carrer, nom del carrer, departament / unitat / suite - O apar
 #: templates/CRM/Contact/Form/Contact.hlp
 #: templates/CRM/Contact/Form/Edit/Address.tpl
 msgid "Supplemental Address"
-msgstr "Direcció adicional "
+msgstr "Adreça adicional "
 
 #: templates/CRM/Contact/Form/Contact.hlp
 #: templates/CRM/Contact/Form/OnBehalfOf.tpl
