--- a/po/fr_CA/common-components.po
+++ b/po/fr_CA/common-components.po
@@ -20,8 +20,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-21 19:50+0000\n"
+"Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -282,7 +282,7 @@ msgstr "Avancé"
 msgid ""
 "This may mean the loss of a substantial amount of data, and the action "
 "cannot be undone."
-msgstr "Cela peut entrainer la perte d'un nombre substantiel de donnée et cette action ne pourra pas être annulée."
+msgstr "Cela peut entrainer la perte d'une quantité importante de données, et l'action ne peut être annulée. "
 
 #: templates/CRM/Admin/Page/APIExplorer.tpl
 #: templates/CRM/Admin/Page/OptionGroup.tpl CRM/Contribute/DAO/Product.php
@@ -1270,7 +1270,7 @@ msgstr "REMARQUE: Alternativement, vous pouvez activer l'option <strong>payer pl
 msgid ""
 "Check this box if you want to give users the option to submit payment "
 "offline (e.g. mail in a check, call in a credit card, etc.)."
-msgstr "Cochez cette case si vous voulez permettre aux utilisateurs de payer hors ligne (ex. courrier, appel, ect.)"
+msgstr "Cochez cette case si vous voulez permettre aux utilisateurs de payer hors ligne (ex.: courrier, appel, etc.)."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 #: templates/CRM/Event/Form/ManageEvent/Fee.tpl
@@ -1906,7 +1906,7 @@ msgstr "Vous pouvez mettre à jour les données de facturation de cette adhésio
 #: CRM/Report/Form/Event/IncomeCountSummary.php
 #: CRM/Report/Form/Event/Summary.php CRM/Report/Form/Extended.php
 msgid "Fee Label"
-msgstr "Titre du tarif"
+msgstr "Description du tarif"
 
 #: CRM/Event/DAO/Participant.php CRM/Report/Form/Event/ParticipantListing.php
 msgid "Fee Currency"
@@ -2277,7 +2277,7 @@ msgstr ""
 #: templates/CRM/Event/Form/ParticipantView.tpl
 #: CRM/Report/Form/Contribute/Detail.php
 msgid "Fees"
-msgstr ""
+msgstr "Tarifs"
 
 #: CRM/Event/Form/SelfSvcUpdate.php CRM/Report/Form/Case/Demographics.php
 #: CRM/Report/Form/Event/ParticipantListing.php
