--- a/po/fr_CA/common-base.po
+++ b/po/fr_CA/common-base.po
@@ -27,7 +27,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-24 19:55+0000\n"
+"PO-Revision-Date: 2016-10-26 02:02+0000\n"
 "Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -15168,7 +15168,7 @@ msgid ""
 "Use <strong>&#37;</strong> wildcard(s) for partial matches. EXAMPLE: Enter "
 "'Volunteer&#37;' as your Activity Type to match any activity whose type is "
 "'Volunteer' + any other words (e.g. Volunteer for Open House)."
-msgstr "Utilisez le caractère <strong>&#37;</strong> pour chercher des correspondances partielles. Par exemple : Entrez 'Réunion&#37;' comme type d'activité si vous voulez rechercher les activités ayant pour type 'Réunion' suivi de n'importe quels autres mots (p ex: Réunion interne)."
+msgstr "Utilisez le caractère <strong>&#37;</strong> pour chercher des correspondances partielles. Par exemple: Entrez 'Réunion&#37;' comme type d'activité si vous voulez rechercher les activités ayant pour type 'Réunion' suivi de n'importe quels autres mots (ex: Réunion interne)."
 
 #: templates/CRM/Contact/Form/Search/Advanced.hlp
 msgid ""
@@ -15283,7 +15283,7 @@ msgid ""
 "In the process of setting up CiviCRM components or configuring pages and "
 "profiles, you might have created test contributions, activities, "
 "participants, pledges, etc."
-msgstr "Dans le processus de mettre en place les composantes CiviCRM ou de configurer des pages et des profiles, vous avez peut-être créé des contributions tests, activités, participants, promesses de don, etc."
+msgstr "Dans le processus de mettre en place les composantes CiviCRM ou de configurer des pages et des profils, vous avez peut-être créé des contributions, activités, participants, promesses de don, etc. de test."
 
 #: templates/CRM/Contact/Form/Search/Advanced.hlp
 msgid ""
@@ -15505,7 +15505,7 @@ msgstr "La recherche par adresse est faite par défaut sur l'adresse principale 
 msgid ""
 "To search by specific location types (e.g. Home, Work...), select one or "
 "more options."
-msgstr "Pour rechercher par type d'adresse (ie Domicile, Travail...), sélectionnez une ou plusieurs options."
+msgstr "Pour rechercher par type d'adresse (ex. Domicile, Travail...), sélectionnez une ou plusieurs options."
 
 #: templates/CRM/Contact/Form/Search/Criteria/Location.tpl
 msgid "Use Address Elements"
@@ -26325,7 +26325,7 @@ msgstr ""
 msgid ""
 "When multiple options are selected within a search field the selections are combined using <strong>OR</strong> criteria (e.g. selecting both 'Group A' and 'Group B' will find contacts who are either in 'Group A' OR 'Group B' or in both).</p>\n"
 "  <p>By default the different search fields are combined using the <strong>AND</strong> Search Operator (e.g. selecting Tag is 'Age' AND Country is 'Canada' returns only those contacts who meet both criteria). You can override the Search Operator default for combining different fields in the Search Settings."
-msgstr ""
+msgstr "Lorsque plusieurs options sont sélectionnées dans un champ de recherche, les sélections sont combinées en utilisant l'opérateur <strong>OU</strong> (ex: en sélectionnant les 'Groupe A' et 'Groupe B', les contacts seront ceux du 'Groupe A' OU 'Groupe B' ou les deux).</p>\n<p>Par défaut, les différents champs de recherche sont combinés en utilisant l'opérateur <strong>ET</strong>. (ex: en sélectionnant l'étiquette 'Âge' ET le pays ‘Canada', seuls les contacts répondant à ces critères seront retournés). Vous pouvez remplacer l'opérateur de recherche par défaut dans les 'Paramètres de recherche'."
 
 #: templates/CRM/Contact/Form/Search/Advanced.hlp
 msgid ""
