--- a/po/ca_ES/common-components.po
+++ b/po/ca_ES/common-components.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-15 09:21+0000\n"
+"PO-Revision-Date: 2016-11-17 08:35+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -2258,12 +2258,12 @@ msgstr ""
 #: templates/CRM/Contribute/Page/ContributionTotals.tpl
 #: CRM/Report/Form/Contribute/Summary.php
 msgid "Median"
-msgstr ""
+msgstr "Mediana"
 
 #: templates/CRM/Contribute/Page/ContributionTotals.tpl
 #: CRM/Report/Form/Contribute/Summary.php
 msgid "Mode"
-msgstr ""
+msgstr "Moda"
 
 #: CRM/Event/Form/ManageEvent/TabHeader.php CRM/Event/Page/ManageEvent.php
 #: templates/CRM/Event/Form/ManageEvent/Tab.hlp
