--- a/po/pt_BR/case.po
+++ b/po/pt_BR/case.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Débora Maia <debora@dotpro.com.br>, 2016
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2012,2014
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2013
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2012
@@ -14,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-17 21:39+0000\n"
-"Last-Translator: Edson Duarte <edson@artsoft.com.br>\n"
+"PO-Revision-Date: 2016-11-17 10:52+0000\n"
+"Last-Translator: Débora Maia <debora@dotpro.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -296,11 +297,11 @@ msgstr "Uma cópia da atividade foi enviada ao(s) contato(s) selecionado(s)."
 
 #: CRM/Case/Form/Activity.php
 msgid "%1 Saved"
-msgstr ""
+msgstr "1% Salvo"
 
 #: CRM/Case/Form/ActivityToCase.php CRM/Case/XMLProcessor/Report.php
 msgid "With Contact(s)"
-msgstr ""
+msgstr "Com o(s) Contato(s)"
 
 #: CRM/Case/Form/ActivityView.php
 msgid "Activity Revision History"
@@ -396,7 +397,7 @@ msgstr "Atividades apagadas"
 
 #: CRM/Case/Form/EditClient.php
 msgid "Select Contact"
-msgstr ""
+msgstr "Selecionar Contato"
 
 #: CRM/Case/Form/EditClient.php
 msgid "Reassign Case"
@@ -480,11 +481,11 @@ msgstr ""
 
 #: CRM/Case/Info.php
 msgid "access my cases and activities"
-msgstr ""
+msgstr "Acessar meus Processos e Atividades"
 
 #: CRM/Case/Info.php
 msgid "access all cases and activities"
-msgstr ""
+msgstr "Acessar todos os Processos e Atividades"
 
 #: CRM/Case/Info.php
 msgid "add cases"
@@ -510,7 +511,7 @@ msgstr "Você não possui autorização para acessar todos os Processos e Ativid
 
 #: CRM/Case/Page/Tab.php
 msgid "Are you sure you want to delete this case?"
-msgstr ""
+msgstr "Tem certeza que quer deletar este processo?"
 
 #: CRM/Case/Page/Tab.php CRM/Case/Selector/Search.php
 #: templates/CRM/Case/Form/Case.tpl
@@ -613,7 +614,7 @@ msgstr ""
 
 #: ang/crmCaseType/activityTypesTable.html
 msgid "Add activity type"
-msgstr ""
+msgstr "Adicionar tipo de atividade"
 
 #: ang/crmCaseType/caseTypeDetails.html
 msgid "WARNING: The case type name includes deprecated characters."
