--- a/po/es_ES/case.po
+++ b/po/es_ES/case.po
@@ -20,8 +20,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-11-17 10:31+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1146,7 +1146,7 @@ msgstr "Restaurar casos"
 
 #: CRM/Case/Task.php
 msgid "Print/merge Document"
-msgstr ""
+msgstr "Imprimir/unir documento"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Homeless Services Coordinator is"
