--- a/po/pt_BR/extension.po
+++ b/po/pt_BR/extension.po
@@ -3,14 +3,15 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Débora Maia <debora@dotpro.com.br>, 2016
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2013
 # Thalita Nick Pinheiro Gomes <thalitanpg@gmail.com>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-11-17 10:42+0000\n"
+"Last-Translator: Débora Maia <debora@dotpro.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -102,7 +103,7 @@ msgid ""
 "You will not be able to install extensions at this time because your "
 "installation of PHP does not support ZIP archives. Please ask your system "
 "administrator to install the standard PHP-ZIP extension."
-msgstr ""
+msgstr "Você não poderá instalar extensões neste momento porque sua instalação de PHP não suporta arquivos ZIP. Favor solicitar ao seu administrador de sistema que instale a extensão PHP-ZIP."
 
 #: CRM/Extension/Downloader.php
 msgid ""
@@ -113,11 +114,11 @@ msgstr ""
 
 #: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension: bad directory structure"
-msgstr ""
+msgstr "Impossível extrair a extensão: estrutura de diretório inválida"
 
 #: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension: %1 cannot be cleared"
-msgstr ""
+msgstr "Impossível extrair a extensão: %1 não pode ser limpo"
 
 #: CRM/Extension/Downloader.php
 msgid "Installation Error"
@@ -125,7 +126,7 @@ msgstr "Erro de instalação"
 
 #: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension to %1."
-msgstr ""
+msgstr "Impossível extrair a extensão para %1."
 
 #: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension."
@@ -133,7 +134,7 @@ msgstr "Incapaz de extrair a extensão."
 
 #: CRM/Extension/Downloader.php
 msgid "Failed reading data from %1 during installation"
-msgstr ""
+msgstr "Falha na leitura dos dados de %1 durante a instalação"
 
 #: CRM/Extension/Manager/Payment.php
 msgid "Failed to load file (%3) for payment processor (%1) while running \"%2\""
@@ -157,7 +158,7 @@ msgstr ""
 
 #: CRM/Extension/Manager.php
 msgid "Selected option value has been deleted."
-msgstr ""
+msgstr "O valor de opção selecionado foi excluído."
 
 #: CRM/Extension/Browser.php
 msgid ""
