--- a/po/de_DE/common-base.po
+++ b/po/de_DE/common-base.po
@@ -24,6 +24,7 @@
 # Jens-Erik Weber <JensErikWeber@gmail.com>, 2012
 # Jens-Erik Weber <JensErikWeber@gmail.com>, 2012-2014
 # Jo <jo@caj-augsburg.de>, 2011-2012
+# Jonathan Schmied <jonathan.schmied@gmx.at>, 2016
 # Konrad Iwer <konrad.pssc@gmail.com>, 2014
 # Martin Peth <peth@systopia.de>, 2013-2016
 # metalmatze <matthias.hahn@web.de>, 2014
@@ -49,8 +50,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-28 12:24+0000\n"
-"Last-Translator: Martin Peth <peth@systopia.de>\n"
+"PO-Revision-Date: 2016-11-18 08:49+0000\n"
+"Last-Translator: Jonathan Schmied <jonathan.schmied@gmx.at>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25176,7 +25177,7 @@ msgstr ""
 
 #: CRM/Core/BAO/UFField.php CRM/Export/BAO/Export.php
 msgid "Date Received"
-msgstr ""
+msgstr "Eingangsdatum"
 
 #: CRM/Core/BAO/UFField.php CRM/Core/OptionValue.php CRM/Core/SelectValues.php
 #: CRM/Export/BAO/Export.php xml/templates/civicrm_data.tpl
@@ -26625,7 +26626,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Chargeback"
-msgstr ""
+msgstr "Rückbuchung"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Activity Details Report"
