--- a/po/nl_NL/common-base.po
+++ b/po/nl_NL/common-base.po
@@ -4,7 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Arnaud De Moyer <arnauddemoyer@gmail.com>, 2015
-# brouwser <brouwer@ee-atwork.nl>, 2013
+# brouwser <brouwer@ee-atwork.nl>, 2013,2016
 # brouwser <brouwer@ee-atwork.nl>, 2012
 # brouwser <brouwer@ee-atwork.nl>, 2012-2013
 # Geert Buyse <geert.buyse@chiro.be>, 2015-2016
@@ -22,8 +22,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-09 17:49+0000\n"
-"Last-Translator: Geert Buyse <geert.buyse@chiro.be>\n"
+"PO-Revision-Date: 2016-11-18 09:04+0000\n"
+"Last-Translator: brouwser <brouwer@ee-atwork.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -9588,7 +9588,7 @@ msgstr "Bericht opnieuw aangemeld"
 
 #: CRM/Core/SelectValues.php
 msgid "Unsubscribe via email"
-msgstr "Afmelden via e-mail"
+msgstr "Afmelden nieuwsbrief via e-mail"
 
 #: CRM/Core/SelectValues.php
 msgid "Unsubscribe via web page"
@@ -9604,7 +9604,7 @@ msgstr "Opnieuw registreren via webpagina"
 
 #: CRM/Core/SelectValues.php
 msgid "Opt out via email"
-msgstr "Afmelden via e-mail"
+msgstr "Afmelden bulkmail via email"
 
 #: CRM/Core/SelectValues.php
 msgid "Opt out via web page"
@@ -14416,7 +14416,7 @@ msgstr "Als u CiviMail gebruikt om mailings naar contacten te sturen, kunt u met
 
 #: templates/CRM/Contact/Form/Contact.hlp
 msgid "Opt Out"
-msgstr "Opt-out"
+msgstr "Opt Out"
 
 #: templates/CRM/Contact/Form/Contact.hlp
 msgid ""
