--- a/po/pt_BR/event.po
+++ b/po/pt_BR/event.po
@@ -3,7 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Diego Viegas <diego.viegas@dotpro.com.br>, 2014
+# Diego Viegas <diego.viegas@dotpro.com.br>, 2014,2016
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2013
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2011
 # drero <dreroips@yahoo.com.br>, 2012
@@ -11,15 +11,15 @@
 # EVANDRO PIRES <evandroprieto@gmail.com>, 2013
 # Fernando Ribeiro da Silva <fernando.ribeiro@gmail.com>, 2012
 # Joildo Santos <joildosantos@paraisopolis.org>, 2013
-# Mathieu Lutfy <mathieu@bidon.ca>, 2014
+# Mathieu Lu <mathieu@bidon.ca>, 2014
 # Pedro Maia <pedro@pedromaia.com.br>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-11-22 05:29+0000\n"
+"Last-Translator: Diego Viegas <diego.viegas@dotpro.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -38,7 +38,7 @@ msgstr "Não foi possível encontrar a identificação do participante"
 
 #: CRM/Event/BAO/Participant.php
 msgid "This event is full."
-msgstr ""
+msgstr "Este evento está lotado."
 
 #: CRM/Event/BAO/Participant.php
 msgid "- Participant Fields -"
