--- a/po/pt_BR/pledge.po
+++ b/po/pt_BR/pledge.po
@@ -3,7 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Diego Viegas <diego.viegas@dotpro.com.br>, 2014
+# Diego Viegas <diego.viegas@dotpro.com.br>, 2014,2016
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2013
 # drero <dreroips@yahoo.com.br>, 2012
 # EVANDRO PIRES <evandroprieto@gmail.com>, 2011-2012
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-11-22 05:30+0000\n"
+"Last-Translator: Diego Viegas <diego.viegas@dotpro.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -49,11 +49,11 @@ msgstr "Situação da Promessa de pagamento"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid "%1 - due on %2 (overdue)"
-msgstr ""
+msgstr "%1 - devido em %2 (em atraso)"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid "%1 - due on %2"
-msgstr ""
+msgstr "%1 - devido em %2"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid ""
