--- a/po/pt_BR/mailing.po
+++ b/po/pt_BR/mailing.po
@@ -4,7 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Débora Maia <debora@dotpro.com.br>, 2016
-# Diego Viegas <diego.viegas@dotpro.com.br>, 2014
+# Diego Viegas <diego.viegas@dotpro.com.br>, 2014,2016
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2013
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2011-2012
 # drero <dreroips@yahoo.com.br>, 2012
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-01 15:12+0000\n"
-"Last-Translator: Débora Maia <debora@dotpro.com.br>\n"
+"PO-Revision-Date: 2016-11-22 05:29+0000\n"
+"Last-Translator: Diego Viegas <diego.viegas@dotpro.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -36,7 +36,7 @@ msgstr "CiviMail não enviará um e-mail com conteúdo vazio, Ignorando: %1"
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Field \"%1\" is required."
-msgstr ""
+msgstr "O campo \"%1\" é obrigatório."
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Field \"body_html\" or \"body_text\" is required."
