--- a/po/pt_BR/report.po
+++ b/po/pt_BR/report.po
@@ -3,7 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Diego Viegas <diego.viegas@dotpro.com.br>, 2014-2015
+# Diego Viegas <diego.viegas@dotpro.com.br>, 2014-2016
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2013-2014
 # EVANDRO PIRES <evandroprieto@gmail.com>, 2011
 # EVANDRO PIRES <evandroprieto@gmail.com>, 2011
@@ -15,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-11-22 05:31+0000\n"
+"Last-Translator: Diego Viegas <diego.viegas@dotpro.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -26,11 +26,11 @@ msgstr ""
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance ID"
-msgstr ""
+msgstr "ID da Instância do Relatório"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Domain ID"
-msgstr ""
+msgstr "ID do Domínio da Instância do Relatório"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Title"
@@ -38,15 +38,15 @@ msgstr "Título da instância do Relatório"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report template ID"
-msgstr ""
+msgstr "ID do Modelo de Relatório"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report instance Name"
-msgstr ""
+msgstr "Nome da Instância do Relatório"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Arguments"
-msgstr ""
+msgstr "Argumentos da Instância do Relatório"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance description"
@@ -54,7 +54,7 @@ msgstr ""
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Permissions"
-msgstr ""
+msgstr "Permissões da Instância do Relatório"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Assigned to Roles"
